# ppenc

./: Cargo.toml  Makefile  README.md  blockcipher.c  blockcipher.h  build.rs  cprng.c  cprng.h  hash.c  hash.h  newdevice  ppenc.c  ppenc.h
example-client/: client.c  msgs.h
example-server/: Cargo.toml
example-server/src/: main.rs
monstermac/: Cargo.toml
monstermac/src/: config.rs  main.rs  server.rs
src/: blockcipher.rs  cprng.rs  hash.rs  lib.rs
