[package]
name = "monstermac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = ">=0.4.13, <0.4.14"
json_env_logger = "0.1.1"
kv-log-macro = "1.0.7"
async-std = {version= "1.10.0"}
async-h1 = "2.3.3"
http-types = "2.12.0"
hmac-sha256 = "1.1.2"
fasthash = "0.4.0"
lazy_static = "1.4.0"
hex = "0.4.3"
